--- a/history.html
+++ b/history.html
@@ -33,7 +33,7 @@
         bröder hade dött som spädbarn – var Fredrik destinerad att bli tronföljare. Han döptes med all den pompa och
         ståt som rådde vid hovet i Berlin under hans farfar, Fredrik I. Denne var en praktälskande barockfurste som
         krönt sig själv till kung. Efter hans död 1713 – året efter sonsonens födelse – fick dock lyxlivet vid det
-        preussiska hovet ett abrupt slut. Han son Fredrik Vilhelm I – ”Soldatkungen” – var övertygad om att Preussen,
+        preussiska hovet ett abrupt slut. Hans son Fredrik Vilhelm I – ”Soldatkungen” – var övertygad om att Preussen,
         med sitt exponerade läge mitt i Europa endast kunde överleva som stark militärstat. Han förde en stram
         finanspolitik och byggde upp en stor och väldrillad armé. Fredrik Vilhelm hade också en privathär av högresta
         män som han delvis rekryterade från andra länder.
@@ -166,6 +166,10 @@
         på många områden var långt före sin tid.
 
 
+      </p>
+      <br>
+      <p>
+        <b>Källa: </b> utdrag från <a href="https://popularhistoria.se/civilisationer/regenter/fredrik-den-store">Populär historia</a>
       </p>
 
     </div>
