--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ background: linear-gradient(to right, #F29492, #114357); /* W3C, IE 10+/ Edge, F
   <div class="motivational-speech">
 
     <p>
-      Nothing changes if nothing changes. You can not change you life unless you change something. If you always do what you always did, you will always get what you always
+      Nothing changes if nothing changes. You can not change your life unless you change something. If you always do what you always did, you will always get what you always
       got. To get something you've never had, you have to do something do you've never done before. If you think the price
       of winning is too high, wait until you get the price of regret. Our competition has never been with anyone else, our
       true competition has only ever been our bad habits, our procrastination, our lack of discipline, our fear and our
