more minor changes lol

--- a/history.html
+++ b/history.html
@@ -149,8 +149,9 @@
       </p>
       <br>
       <p> 
-        <!-- Bra jobbat, du är ett steg närmre flaggan för denna sida. Gå till https://suleymanzahi.github.io/ctf-challenge-aux/, lös
-         uppgiften där. Svaret på på uppgiften är flaggan för denna sida -->
+        <!-- Bra jobbat! Du är ett steg närmre flaggan för denna sida. Gå till https://suleymanzahi.github.io/ctf-challenge-aux/, lös
+         uppgiften där. Svaret på den uppgiften är delflaggan för denna sida. OBS: Enheten du får i svaret ingår inte i denna
+         delflaggan.  -->
         Förtjänar Fredrik II att kallas ”den store”? Där går åsikterna isär och bilden av honom är splittrad. I det
         allmänna medvetandet är den kortväxte mannen med den trekantiga hatten en mytomsusad sagogestalt – der Alte
         Fritz. I fackkretsar är bilden av honom dock realistisk och differentierad. Biografiskrivare skildrar honom som
